--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
 
     <main>
 
+        <!-- news nav section -->
+        <section class="container">
+            <div id="nav2" class="navbar">
+                <ul>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Blog</a></li>
+
+                </ul>
+            </div>
+        </section>
 
     </main>
 
@@ -43,10 +57,19 @@
 
 
 
+
+
+    <footer>
+        <div class="text-black text-center">
+            <!-- <p>Copyright 2021 News Portal</p> -->
+        </div>
+    </footer>
+
     <!---- scripts ---->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+
     <script src="js/app.js"></script>
 </body>
 
