categories list dynamically added nav menu

--- a/index.html
+++ b/index.html
@@ -36,20 +36,18 @@
 
     <main>
 
-        <!-- news nav section -->
-        <section class="container">
-            <div id="nav2" class="navbar">
-                <ul>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Blog</a></li>
 
-                </ul>
-            </div>
-        </section>
+        <!-- news nav section -->
+        <!-- id="nav2" -->
+        <div id="nav2" class="navbar">
+            <ul id="categories-name">
+                <!-- dynamically added -->
+
+            </ul>
+        </div>
+
+
+
 
     </main>
 
