--- a/index.html
+++ b/index.html
@@ -38,16 +38,22 @@
 
 
         <!-- news nav section -->
-        <!-- id="nav2" -->
         <div id="nav2" class="navbar">
             <ul id="categories-name">
+
                 <!-- dynamically added -->
 
             </ul>
         </div>
 
 
-
+        <section class="container">
+            <div id="breakingNews">
+                <!-- <div class="card mb-3">
+                      dynamically added  
+                </div> -->
+            </div>
+        </section>
 
     </main>
 
@@ -59,16 +65,16 @@
 
     <footer>
         <div class="text-black text-center">
-            <!-- <p>Copyright 2021 News Portal</p> -->
+            <p>Copyright 2021 News Portal</p>
         </div>
     </footer>
 
     <!---- scripts ---->
+    <script src="js/app.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-
-    <script src="js/app.js"></script>
 </body>
 
 </html>
