--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <header class="container">
         <div class="navbar">
+
             <!-- <img class="text-logo" src="img/logo.png" alt=""> -->
             <div class="text-logo">
                 <a href="index.html"
@@ -23,10 +24,16 @@
                     style="font-weight: 800; font-size:x-large; color: red; text-decoration: none">News</a>
             </div>
 
-            <ul>
-                <li><a href="#">News</a></li>
-                <li><a href="blog.html">Blog</a></li>
-            </ul>
+            <div id="news-blogs" class="text-logo ">
+
+                <a href="#"
+                    style="font-weight: 600; color: white; font-size:large; text-decoration: none; padding: 20px;">News</a>
+                <a href="blog.html"
+                    style="font-weight: 600; color: blue; font-size:large; text-decoration: none">Blogs</a>
+
+            </div>
+
+
         </div>
     </header>
 
@@ -58,27 +65,13 @@
 
         <section>
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Launch demo modal
-            </button>
+            <!--  -->
 
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            ...
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
-                        </div>
-                    </div>
+                <div id="modal-show" class="modal-dialog">
+                    <!-- d -->
                 </div>
             </div>
 
