load spinner added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 
     <main>
 
-
         <!-- news nav section -->
         <div id="nav2" class="navbar">
             <ul id="categories-name">
@@ -54,14 +53,33 @@
         </div>
 
 
+
         <section class="container">
+            <div id="news-count" class="py-3 ps-4 mb-4 text-primary bg-light fs-3 fw-semibold">
+
+            </div>
             <div id="breakingNews">
                 <!-- <div class="card mb-3">
                       dynamically added  
                 </div> -->
             </div>
+
+            <!-- spinner -->
+            <div id="spinner-loader" class="d-none d-flex justify-content-center">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
         </section>
 
+
+        <section>
+
+        </section>
+        <!-- news items found  -->
+        <section>
+
+        </section>
 
         <section>
             <!-- Button trigger modal -->
