--- a/blog.html
+++ b/blog.html
@@ -13,54 +13,9 @@
 </head>
 
 <body class="body">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
 
-
-
-
-    <header class="container">
-
-        <div class="navbar">
+    <header class="container mt-4">
+        <div class="container navbar bg-info px-4">
             <!-- <img class="text-logo" src="img/logo.png" alt=""> -->
             <div class="text-logo">
                 <a href="index.html"
@@ -69,11 +24,12 @@
                     style="font-weight: 800; font-size:x-large; color: red; text-decoration: none">News</a>
             </div>
 
-            <ul>
-                <li><a href="index.html">News</a></li>
-                <li><a href="index.html">Blog</a></li>
-
-            </ul>
+            <div id="nav2" class=" text-logo">
+                <a href="index.html"
+                    style="font-weight: 800; color: white; font-size:x-large; text-decoration: none; padding: 20px;">News</a>
+                <a href="index.html"
+                    style="font-weight: 800; color:darkorange; font-size:x-large; text-decoration: none">Blogs</a>
+            </div>
         </div>
     </header>
 
@@ -164,6 +120,11 @@
     </main>
 
 
+    <footer class="container mb-4">
+        <div class="rounded text-light fw-semibold text-center p-4 bg-info">
+            <p>Copyright 2022 @ Daily Developers News Portal!</p>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
