navbar deisign plus

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <header class="container">
         <section>
             <!-- navbar section -->
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg bg-black mt-4 rounded">
                 <div class="container">
                     <a class="navbar-brand text-success fw-bold" href="#"><a href="index.html"
-                            style="font-weight: 800; font-size:x-large; color:black; text-decoration: none">Daily
-                            devs-<span
+                            style="font-weight: 800; font-size:x-large; color:white; text-decoration: none">Daily
+                            Devs-<span
                                 style="font-weight: 800; font-size:x-large; color: red; text-decoration: none">News</span></a>
 
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                             aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -32,11 +32,11 @@
                         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                             <ul class="navbar-nav   fs-5 fw-semibold">
                                 <li class="nav-item">
-                                    <a class="nav-link active text-center text-success" aria-current="page"
+                                    <a class="nav-link active text-center text-warning" aria-current="page"
                                         href="index.html">News</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-center text-success" aria-current="page"
+                                    <a class="nav-link active text-center text-info" aria-current="page"
                                         href="blog.html">Blogs</a>
                                 </li>
                                 <li class="nav-item ms-md-3 d-flex justify-content-center">
